--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/sinon": "^10.0.13",
     "axios": "^1.3.2",
     "express": "^4.18.2",
     "jest": "^29.4.1",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
     "pg-promise": "^11.2.0",
+    "sinon": "^15.0.1",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
